<resources>
    <string name="app_name">朝阳心理</string>
    <string name="select_avatar">选择头像</string>
    <string name="select_camera">相机拍摄</string>
    <string name="select_photo">手机相册</string>
    <string name="cancel">取消</string>
    <string name="network_error">您的网络似乎不给力哦!</string>
    <string name="request_failure">请求失败</string>
    <string name="operation_success">操作成功</string>
    <string name="operation_failure">操作失败</string>
    <string name="app_logout">确认要退出当前账号吗?</string>
    <string name="confirm">确认</string>
    <string name="btn_finish">完成</string>
    <string name="pickerDate">选择日期</string>
    <string name="pickerTime">选择时间</string>
    <string name="please_select">请选择</string>
    <string name="ok">确定</string>
    <string name="nothing_record">您目前还没有任何聊天记录…</string>
    <string name="group_chat">群聊</string>
    <string name="select_contact">选择联系人</string>
    <string name="search">搜索</string>
    <string name="select_groups">选择群组</string>
    <string name="delete_chat">删除该聊天</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="forward">转发</string>
    <string name="chat_messages">聊天信息</string>
    <string name="people">人</string>
    <string name="clear_chat_record">清空聊天记录</string>
    <string name="chat_name">群聊名称</string>
    <string name="delete_and_exit">删除并退出</string>
    <string name="delete_chat_record_hint">确定要删除此聊天记录吗?</string>
    <string name="deleting">正在删除</string>
    <string name="not_allowed_delete_self">不允许删除自己</string>
    <string name="please_wait">请稍等</string>
    <string name="exit_chat_group_hint">删除并退出后,将不再接收此群聊信息</string>
    <string name="modify_chat_group_name">修改群聊名称</string>
    <string name="please_rename_group_name">请为该群起一个名字</string>
    <string name="select">选择</string>
    <string name="create_new_chat">创建新聊天</string>
    <string name="recent_chat">最近聊天</string>
    <string name="find_chats">查找聊天记录</string>
    <string name="confirm_forward_chat">确定要转发到当前聊天吗?</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="resend">是否重发该消息?</string>
    <string name="picture">图片</string>
    <string name="voice">语音</string>
    <string name="data_loading">数据加载中，请稍候…</string>
    <string name="dataloading">加载中…</string>
    <string name="text_no_connection">网络连接失败,请检查网络后重试</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="anteayer">前天</string>
    <string name="loading">正在载入</string>
    <string name="hold_down_talk">按住说话</string>
    <string name="talk_time_short">说话时间太短</string>
    <string name="photo">照片</string>
    <string name="take">拍照</string>
    <string name="select_from_photo">从相册选择</string>
    <string name="location">位置</string>
    <string name="loosen_end">松开结束</string>
    <string name="downloading">正在下载，请稍等!</string>
    <string name="save">保存</string>
    <string name="speaker_mode">切换到扬声器模式</string>
    <string name="handset_mode">切换到听筒模式</string>
    <string name="save_photos_success">存储照片成功</string>
    <string name="save_photos_failure">存储照片失败</string>
    <string name="prompt">提示</string>
    <string name="frends_tip">友情提示</string>
    <string name="send">发送</string>
    <string name="finish">完成</string>
    <string name="lable_praise_count">等%1$d人</string>
    <string name="vancloud_nofile_prompt">文件不存在</string>
    <string name="vancloud_photo_album">相册</string>
    <string name="vancloud_photo_album_prompt">最多选择9张图片</string>
    <string name="normal">按住 说话</string>
    <string name="recording">松开 结束</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
    <color name="red">#ff0000</color>
    <string name="audiodel_toast">语音已被清理</string>
    <string name="delete">删除</string>
    <string name="new_message">(%1$d条新消息)</string>
    <string name="new_message_mul">有%1$d个联系人给你发过来%2$d条新消息</string>
    <string name="invite">邀请</string>
    <string name="join_group">加入了群聊</string>
    <string name="you">你</string>
    <string name="will">将</string>
    <string name="remove_group_chat">移出群聊</string>
    <string name="remove_my_group_chat">将你移除群聊</string>
    <string name="exit_group_chat">退出了群聊</string>
    <string name="modify_group_name">修改群名为</string>
    <!-- 星期 -->
    <string name="fen">份</string>
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="sun">日</string>
    <string name="date_year">年</string>
    <string name="date_month">月</string>
    <string name="date_day">日</string>
    <string name="date_hour">时</string>
    <string name="date_minute">分</string>
    <string name="datefulldialog_info_endtime">结束时间不能小于开始时间</string>
    <string name="datefulldialog_info_starttime">开始时间不能大于结束时间</string>
    <string name="select_not_less_current">选择日期不能小于当前日期</string>
    <string name="select_not_great_current">选择日期不能大于当前日期30天</string>
    <string name="datefulldialog_starttime">开始时间不能小于结束时间24小时</string>
    <string name="datefulldialog_endtime">结束时间不能大于开始时间24小时</string>

</resources>
